<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtViewCant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblDlgProdContinut"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/txtDlgProdContinutCant"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="true"
            android:inputType="numberDecimal"
            android:textSize="30sp">

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layDlgProdDiferente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <TextView
            android:id="@+id/lblDlgProdDiferente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblDlgProdContDiferente"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/txtDlgprodDiferente"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="true"
            android:inputType="numberDecimal"
            android:textSize="30sp"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layDlgModPret"
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <TextView
            android:id="@+id/txtViewPret"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblDlgProdPret"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/txtDlgProdContinutPret"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="true"
            android:inputType="numberDecimal"
            android:textSize="30sp">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <CheckBox
        android:id="@+id/chkDlgProdContinut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:text="Bonus"
        android:textSize="30sp"
        android:visibility="invisible" />

    <RadioGroup
        android:id="@+id/rdbGrdlgProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FARA AMBALARE"
            android:textSize="30dp" />

        <RadioButton
            android:id="@+id/rdbDlgProdFA1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VIDAT"
            android:textSize="30dp" />

        <RadioButton
            android:id="@+id/rdbDlgProdFA2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FELIAT-VIDAT"
            android:textSize="30dp" />

        <RadioButton
            android:id="@+id/rdbDlgProdFA3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PUNGA-ATM"
            android:textSize="30dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CAS. ROTUNDA"
            android:textSize="30dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CAS. DREPT."
            android:textSize="30dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AMB. INDIVID."
            android:textSize="30dp" />

    </RadioGroup>

</LinearLayout>
